Fix missing border-bottom on :hover inside igGrid row

--- a/src/css/themes/bootstrap3/flatly/infragistics.theme.css
+++ b/src/css/themes/bootstrap3/flatly/infragistics.theme.css
@@ -3268,9 +3268,6 @@ body .ui-tooltip {
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
 }
-.ui-iggrid tbody td.ui-state-hover {
-  border-color: transparent;
-}
 .ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable,
 .ui-iggrid .ui-iggrid-table-mrl tbody td {
   border-right: 1px solid #ecf0f1;
